# Boat

./: custom.py  letitlive.py  main.py  pallete  pyproject.toml
cogs/: call  call.py  commands.py  economy  economy.py  ex  ex.py  fun  fun.py  games.py  help.py  info.py  owner.py  poll  post  shop.py  test  test.py
json/: cooldown.json  member.json  mine.json  shop.json
templates/: index.html
txt/: example.json
